# stark-attestations

./: .gitignore  Cargo.toml  Dockerfile  README  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.ts  yarn.lock.old
cli/: cli.py
programs/: .gitignore  compile_and_run.sh  storage_proof.cairo
programs/lib/: bytes_utils.cairo  keccak.cairo  packed_keccak.cairo
programs/lib/secp/: secp.cairo  secp_ec.cairo  secp_field.cairo
programs/lib/storage_verification/: address.cairo  bitset.cairo  bitshift.cairo  blockheader_rlp_extractor.cairo  extract_from_rlp.cairo  keccak.cairo  swap_endianness.cairo  trie_proofs.cairo  words64.cairo  xor_state.cairo
public/: index.html  manifest.json
src/: App.tsx  index.tsx  lib.rs  theme.tsx
src/components/Badge/: Badge.tsx
src/components/Header/: Header.tsx
src/components/Table/: Table.tsx
src/components/Wallet/: Ethereum.tsx
src/lib/: minter.ts
src/pages/Badges/: ViewAccountPage.tsx  ViewBadgePage.tsx
src/pages/Home/: HomePage.tsx
src/pages/Mint/: MintPage.tsx
